--- a/src/components/MainPanel/Home/Home.module.css
+++ b/src/components/MainPanel/Home/Home.module.css
@@ -1,16 +1,17 @@
 
 
 .home{
-    display: grid;
-    grid-template-rows: 30px 1fr 110px;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: calc(100vh - 50px);
+    height: 100%;
     gap: 10px;
     padding: 10px;
 }
 .top{
     width: 100%;
     height: 40px;
+    min-height: 40px;
     display: flex;
     grid-row: 1 / 2;
     padding: 0 15px;
@@ -29,8 +30,9 @@
 
 /* pinned tasks */
 .pinned{
-    width: 100%;
-    height: 100%;
+    max-height: calc(100% - 170px);
+    min-height: 200px;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -38,10 +40,12 @@
     border-radius: 5px;
     overflow: hidden;
     grid-row: 2 / 3;
+    flex-grow: 1;
 }
 .pinned-tasks-container{
     height: 100%;
     width: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -74,16 +78,14 @@
 .home .no-tasks-message{
     margin-left: 15px;
 }
+
 /* habit */
 .habit{
     width: 100%;
     height: 30px;
     overflow: hidden;
-    margin-top: auto;
-    margin-bottom: 15px;
-    
+    margin-bottom: 10px;
     border-radius: 5px;
-    grid-row: 3 / 4;
     gap: 15px;
     display: flex;
     flex-direction: column;
@@ -91,6 +93,7 @@
 }
 .habit.expanded-habit{
     height: 110px !important;
+    min-height: 110px !important;
     transition: all 0.1s;
     padding: 10px 0;
 }
@@ -145,4 +148,14 @@
     opacity: 1;
 }
 
+
+
+@media (orientation: portrait) {
+
+    .home{
+        width: 100vw;
+        height: calc(50vh - 30px);
+    }
+
+}
 
