--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -18,6 +18,9 @@
 .header h3{ 
     margin-right: auto;
 }
+.header .task-buttons{
+    margin-left: auto;
+}
 .header .task-buttons img{
     height: 25px;
     width: 25px;
@@ -74,10 +77,33 @@
     justify-content: space-between;
 }
 
+.filters{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 0 10px;
+    margin-top: 10px;
+}
+.filter-button{
+    background-color: transparent;
+    border: 1px solid rgba(211, 211, 211, 0.2);
+    padding: 5px;
+}
+.filter-button.selected-category{
+    background-color: white;
+    color: black;
+}
+
+
+
+
 /* task */
 .task{
     width: 100%;
     height: 50px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     gap: 10px;
