--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -1,5 +1,7 @@
 .history{
     padding: 20px 10px;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -7,10 +9,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background-color: #0F0F0F;
     padding: 5px 10px;
     border-radius: 5px;
     gap: 10px;
+    border-left: 5px solid #0F0F0F;
+
 }
 .date{
     margin: 0;
@@ -20,9 +23,9 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #171717;
     padding: 5px;
     border-radius: 5px;
+    
 }
 .entry{
     width: 100%;
