--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -11,6 +11,7 @@
 .container{
     height: 100%;
     width: 100%;
+    max-height: 50vh;
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
