--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -11,7 +11,7 @@
 .container{
     height: 100%;
     width: 100%;
-    max-height: 50vh;
+    
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
@@ -43,6 +43,10 @@
     gap: 10px;
 }
 
-
+@media (orientation: portrait) {
+    .container{
+        max-height: 50vh;
+    }
+}
 
 
