--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -79,17 +79,23 @@
 
 .filters{
     width: 100%;
-    height: 40px;
+    height: 50px;
     display: flex;
     align-items: center;
     gap: 10px;
     padding: 0 10px;
     margin-top: 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap
+}
+.filters::-webkit-scrollbar{
+    display: none;
 }
 .filter-button{
     background-color: transparent;
     border: 1px solid rgba(211, 211, 211, 0.2);
-    padding: 5px;
+    padding: 2px 5px;
 }
 .filter-button.selected-category{
     background-color: white;
