--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -2,6 +2,9 @@
     padding: 20px 10px;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 
