--- a/src/components/MainPanel/History/History.module.css
+++ b/src/components/MainPanel/History/History.module.css
@@ -1,10 +1,13 @@
 .history{
     padding: 20px 10px;
     height: 100%;
+    max-height: calc(100vh - 50px);
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
+    padding-bottom: 50px;
 }
 
 
@@ -39,4 +42,16 @@
 }
 .sessions{
     margin-left: auto;
+}
+
+
+@media (orientation: portrait) {
+    
+    .history{
+        max-height: calc(50vh - 50px);
+        width: 100vw;
+    }
+
+
+
 }
