--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -212,6 +212,7 @@ button{
     border-radius: 5px;
     border: 1px solid rgba(211, 211, 211, 0.1);
 }
+
 .new-task-header{
     height: 30px;
     display: flex;
@@ -276,7 +277,7 @@ button{
 .same-line-bottom{
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-columns: 2fr 1fr;
     gap: 10px;
 }
 
