--- a/src/components/SideMenu/Settings/Settings.module.css
+++ b/src/components/SideMenu/Settings/Settings.module.css
@@ -11,7 +11,6 @@
 .container{
     height: 100%;
     width: 100%;
-    
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
@@ -45,7 +44,8 @@
 
 @media (orientation: portrait) {
     .container{
-        max-height: 50vh;
+        max-height: calc(50vh - 75px);
+        padding-bottom: 50px;
     }
 }
 
