--- a/src/components/MainPanel/Tasks/Tasks.module.css
+++ b/src/components/MainPanel/Tasks/Tasks.module.css
@@ -255,6 +255,8 @@ button{
     animation-duration: 0.1s;
     border-radius: 5px;
     border: 1px solid rgba(211, 211, 211, 0.1);
+    z-index: 15;
+    padding: 20px 10px;
 }
 
 .new-task-header{
@@ -276,6 +278,12 @@ button{
         height: 300px;
         opacity: 1;
     }
+}
+fieldset{
+    border: none;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 .new-task input,
 .new-task #pin-task-input,
